--- a/src/main/resources/assets/constructiondimension/lang/zh_cn.json
+++ b/src/main/resources/assets/constructiondimension/lang/zh_cn.json
@@ -1,6 +1,5 @@
 {
-  "key.category.constructiondimension": "建造维度",
-  "key.constructiondimension.teleport": "传送到建造维度",
-  "message.constructiondimension.teleporting": "正在传送至建造维度...",
-  "message.constructiondimension.cooldown": "传送冷却中！请等待 %s 秒"
+  "key.category.constructiondimension": "传送到建造维度",
+  "key.constructiondimension.teleport": "传送到建造维度/返回原来的维度",
+  "message.constructiondimension.teleporting": "欢迎回来"
 }
